tests-system/checks-4/output
checks T {
       ^ checks-4/foo.check:3: issue: move this check block into foo.rsl:1 [deprecated_feature]
(forall v in values => v != foo), "value cannot be same as value of foo", values
             ^^^^^^ checks-4/foo.check:4: issue: expression could be null [vcg-evaluation-of-null]
                  | example record_type triggering error:
                  |   T bad_potato {
                  |     /* foo is null */
                  |     /* values is null */
                  |   }
T Test_1 {
  ^^^^^^ checks-4/foo.trlc:3: error: values in quantified expression (forall v in values => v != foo) (foo.check:4) must not be null
values = ["x", "kitten", "z"]
         ^ checks-4/foo.trlc:9: check error: value cannot be same as value of foo
Processed 1 model(s), 1 check(s) and 1 requirement file(s) and found 2 warning(s) and 2 error(s)
